src/java/algorithm-jna/src/main/java/com/sengled/media/jna/naldecoder/NaldecoderLibrary.java

package com.sengled.media.jna.naldecoder;
import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import java.nio.ByteBuffer;
/**
 * JNA Wrapper for library <b>naldecoder</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface NaldecoderLibrary extends Library {
	public static final String JNA_LIBRARY_NAME = "naldecoder";
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(NaldecoderLibrary.JNA_LIBRARY_NAME);
	public static final NaldecoderLibrary INSTANCE = (NaldecoderLibrary)Native.loadLibrary(NaldecoderLibrary.JNA_LIBRARY_NAME, NaldecoderLibrary.class);
	/** <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/decoder/src/naldecoder.h:12</i> */
	public interface Init_log_callback_callback extends Callback {
		void apply(int level, Pointer charPtr1);
	};
	/**
	 * Original signature : <code>int Init(Init_log_callback_callback*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/decoder/src/naldecoder.h:12</i>
	 */
	int Init(NaldecoderLibrary.Init_log_callback_callback log_callback);
	/**
	 * Original signature : <code>int DecodeNal(char*, int, const char*, YUVFrame*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/decoder/src/naldecoder.h:14</i><br>
	 * @deprecated use the safer methods {@link #DecodeNal(java.nio.ByteBuffer, int, java.lang.String, com.sengled.media.jna.naldecoder.YUVFrame)} and {@link #DecodeNal(com.sun.jna.Pointer, int, com.sun.jna.Pointer, com.sengled.media.jna.naldecoder.YUVFrame)} instead
	 */
	@Deprecated 
	int DecodeNal(Pointer data_buffer, int len, Pointer token, YUVFrame yuv_frame);
	/**
	 * Original signature : <code>int DecodeNal(char*, int, const char*, YUVFrame*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/decoder/src/naldecoder.h:14</i>
	 */
	int DecodeNal(ByteBuffer data_buffer, int len, String token, YUVFrame yuv_frame);
	/**
	 * Original signature : <code>int Destroy(YUVFrame*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/decoder/src/naldecoder.h:16</i>
	 */
	int Destroy(YUVFrame yuv_frame);
}
